Various cleanups (#8791)